2018-08-16  DJ Delorie  <dj@delorie.com>

	* malloc/malloc.c (_int_free): Check for corrupt prev_size vs size.
	(malloc_consolidate): Likewise.

2018-08-16  Pochang Chen  <johnchen902@gmail.com>

	* malloc/malloc.c (_int_malloc.c): Verify size of top chunk.

2018-08-13  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/syscall-names.list: Update kernel
	version to 4.18.
	(io_pgetevents): New syscall.
	(rseq): Likewise.

2018-11-08  Alexandra Hájková  <ahajkova@redhat.com>

	[BZ #17630]
	* resolv/tst-resolv-network.c: Add test for getnetbyname.

2018-11-08  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #23509]
	* sysdeps/x86/dl-prop.h (_dl_process_cet_property_note): Skip
	note parsing if a NT_GNU_PROPERTY_TYPE_0 note has been processed.
	Update the l_cet field when processing NT_GNU_PROPERTY_TYPE_0 note.
	Check multiple NT_GNU_PROPERTY_TYPE_0 notes.
	* sysdeps/x86/link_map.h (l_cet): Expand to 3 bits,  Add
	lc_unknown.

2018-11-05  Andreas Schwab  <schwab@suse.de>

	[BZ #22927]
	* resolv/gai_misc.c (__gai_enqueue_request): Don't crash if
	creating the first helper thread failed.

2018-10-23  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #23709]
	* sysdeps/x86/cpu-features.c (init_cpu_features): Set TSX bits
	independently of other flags.

2018-10-30  Florian Weimer  <fweimer@redhat.com>

	* stdlib/tst-strtod-overflow.c (do_test): Switch to
	support_blob_repeat.

2018-10-30  Florian Weimer  <fweimer@redhat.com>

	* support/blob_repeat.c (allocate_big): Call mkstemp directly.

2018-10-30  Florian Weimer  <fweimer@redhat.com>

	* stdlib/test-bz22786.c (do_test): Additional free calls to avoid
	memory leaks.

2018-10-30  Florian Weimer  <fweimer@redhat.com>

	Avoid spurious test failures in stdlib/test-bz22786.
	* support/Makefile (libsupport-routines): Add blob_repeat.
	(tests): Add tst-support_blob_repeat.
	* support/blob_repeat.h: New file.
	* support/blob_repeat.c: Likewise.
	* support/tst-support_blob_repeat.c: Likewise.